{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 1,
  "lineage": "51778d62-f872-d501-080a-23a03a0cf3f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "terrvpc1-default-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-09bcd48400a37e298",
            "id": "rtb-09bcd48400a37e298",
            "owner_id": "916015747809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terrvpc1-default-route"
            },
            "vpc_id": "vpc-06c6e22d8b3452dce"
          },
          "dependencies": [
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b5a67fba3e6f33e8",
            "domain": "vpc",
            "id": "eipalloc-07c8b2ec6de3f98f1",
            "network_interface": "eni-09db9f00983e4dc74",
            "private_dns": "ip-10-10-20-133.us-east-2.compute.internal",
            "private_ip": "10.10.20.133",
            "public_dns": "ec2-3-20-210-17.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.210.17",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7919c33c90f5b58",
            "arn": "arn:aws:ec2:us-east-2:916015747809:instance/i-0827db1322da0a4d3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0827db1322da0a4d3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0238417d47192ed5a",
            "private_dns": "ip-172-31-30-193.us-east-2.compute.internal",
            "private_ip": "172.31.30.193",
            "public_dns": "ec2-3-135-64-232.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.64.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0577875461db7ae39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b2775bc8",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eab4068"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terravpc1_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ce65574f1d2e168d",
            "owner_id": "916015747809",
            "tags": {
              "Name": "terravpc1-igw"
            },
            "vpc_id": "vpc-06c6e22d8b3452dce"
          },
          "dependencies": [
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terravpc1-ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c8b2ec6de3f98f1",
            "id": "nat-0f642e376d508e5b1",
            "network_interface_id": "eni-09db9f00983e4dc74",
            "private_ip": "10.10.20.133",
            "public_ip": "3.20.210.17",
            "subnet_id": "subnet-004bf18183790c092",
            "tags": {
              "Name": "TerraVPC1 Nat Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.Public-subnet-1",
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terravpc1-public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ddf00d85d4c62478",
            "owner_id": "916015747809",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce65574f1d2e168d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terravpc1-public-route"
            },
            "vpc_id": "vpc-06c6e22d8b3452dce"
          },
          "dependencies": [
            "aws_internet_gateway.terravpc1_igw",
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arts-p-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ffe4b4d183895b6",
            "route_table_id": "rtb-09bcd48400a37e298",
            "subnet_id": "subnet-02a52e3c2e11abc64"
          },
          "dependencies": [
            "aws_subnet.Private-subnet-1",
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arts-p-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d948b5744439502",
            "route_table_id": "rtb-09bcd48400a37e298",
            "subnet_id": "subnet-0668f7d61490d7fc0"
          },
          "dependencies": [
            "aws_subnet.Private-subnet-2",
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arts1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0802b78f7ec520e8c",
            "route_table_id": "rtb-0ddf00d85d4c62478",
            "subnet_id": "subnet-004bf18183790c092"
          },
          "dependencies": [
            "aws_internet_gateway.terravpc1_igw",
            "aws_route_table.terravpc1-public-route",
            "aws_subnet.Public-subnet-1",
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arts2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094fca54cc5390369",
            "route_table_id": "rtb-0ddf00d85d4c62478",
            "subnet_id": "subnet-0d9c72644e622c17f"
          },
          "dependencies": [
            "aws_internet_gateway.terravpc1_igw",
            "aws_route_table.terravpc1-public-route",
            "aws_subnet.Public-subnet-2",
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916015747809:subnet/subnet-02a52e3c2e11abc64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.30.0/24",
            "id": "subnet-02a52e3c2e11abc64",
            "map_public_ip_on_launch": false,
            "owner_id": "916015747809",
            "tags": {
              "Name": "Private-subnet-1"
            },
            "vpc_id": "vpc-06c6e22d8b3452dce"
          },
          "dependencies": [
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916015747809:subnet/subnet-0668f7d61490d7fc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.31.0/24",
            "id": "subnet-0668f7d61490d7fc0",
            "map_public_ip_on_launch": false,
            "owner_id": "916015747809",
            "tags": {
              "Name": "Private-subnet-2"
            },
            "vpc_id": "vpc-06c6e22d8b3452dce"
          },
          "dependencies": [
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916015747809:subnet/subnet-004bf18183790c092",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.20.0/24",
            "id": "subnet-004bf18183790c092",
            "map_public_ip_on_launch": true,
            "owner_id": "916015747809",
            "tags": {
              "Name": "Public-subnet-1"
            },
            "vpc_id": "vpc-06c6e22d8b3452dce"
          },
          "dependencies": [
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916015747809:subnet/subnet-0d9c72644e622c17f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.21.0/24",
            "id": "subnet-0d9c72644e622c17f",
            "map_public_ip_on_launch": true,
            "owner_id": "916015747809",
            "tags": {
              "Name": "Public-subnet-2"
            },
            "vpc_id": "vpc-06c6e22d8b3452dce"
          },
          "dependencies": [
            "aws_vpc.terravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terravpc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:916015747809:vpc/vpc-06c6e22d8b3452dce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03dc9b039be3221c3",
            "default_route_table_id": "rtb-09bcd48400a37e298",
            "default_security_group_id": "sg-024ae9421b4a697c1",
            "dhcp_options_id": "dopt-feb21295",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06c6e22d8b3452dce",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09bcd48400a37e298",
            "owner_id": "916015747809",
            "tags": {
              "Name": "terravpc1"
            }
          }
        }
      ]
    }
  ]
}